LPS-83516 Fixes alignment issues in Product Menu / Control Menu

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_liferay.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_liferay.scss
@@ -16,17 +16,6 @@
 		border-bottom: 2px solid #65B6F0;
 	}
 
-	.product-menu.sidebar {
-		.sidebar-header {
-			padding-bottom: 1rem;
-			padding-top: 1rem;
-		}
-	}
-
-	.product-menu.sidebar .sidebar-body, .lfr-has-simulation-panel .lfr-simulation-device {
-		top: 4.0625rem;
-	}
-
 	.product-menu .add-application-panel .panel-body {
 		padding-bottom: 0.01rem;
 	}
